# datagram-messages

./: CMakeLists.txt  Readme.md  msg_dispatcher.c  msg_dispatcher.h  package.yml  runtests.sh  service_call.c  service_call.h
python/: message.py  setup.py
python/datagrammessages/: __init__.py  connection_handler.py  message.py  serialdatagram.py  serialdatagramsocket.py
python/datagrammessages/test/: test_connection_handler.py  test_message.py
python/datagrammessages/tools/: zmqmsgbus_relay.py
python/test/: test_message.py
spec/: protocol.md
tests/: msg_dispatcher_test.cpp  service_call_test.cpp
zeromq_interface/: test_client_call.py  test_client_snd_msg.py  test_client_subscriber.py  test_server.py  test_udp_remote.py
